--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 av==9.2.0
-keras
+keras==
 matplotlib==3.5.1
-mediapipe
+mediapipe==0.8.9.1
 numpy==1.20.3
 Pillow==9.2.0
 requests==2.26.0
@@ -10,5 +10,4 @@ streamlit_lottie==0.0.3
 streamlit_option_menu==0.3.2
 streamlit_webrtc==0.42.0
 tensorflow
-opencv-python-headless
-libgl1 
+~pencv_python_headless==4.5.5.62
