--- a/requirements.txt
+++ b/requirements.txt
@@ -10,4 +10,4 @@ streamlit_lottie==0.0.3
 streamlit_option_menu==0.3.2
 streamlit_webrtc==0.42.0
 tensorflow
-opencv_python_headless==4.5.5.62
+opencv-python-headless
